# rust_composition

./: ARCHITECTURE.md  CQRS_REVIEW.md  Cargo.toml  Dockerfile  EXTENSION_GUIDE.md  Makefile  QUICK_REFERENCE.sh  README.md  REFACTORING_COMPLETE.md  ROADMAP.md  docker-compose.yml  docker-dev.sh  quick-start.sh
bruno/: bruno.json  environments.json
bruno/Users/: Get All Users.bru  Get User by ID.bru  Register User.bru  Rename User.bru  Search User by Name.bru
bruno/environments/: production.bru
crates/api-rest/: Cargo.toml
crates/api-rest/src/: handlers.rs  lib.rs  main.rs  openapi.rs
crates/api-rest/src/dto/: mod.rs  requests.rs  responses.rs
crates/api-rest/src/handlers/: commands.rs  error.rs  mod.rs  queries.rs
crates/application/: Cargo.toml
crates/application/src/: event_bus.rs  lib.rs  projection_handler.rs
crates/application/src/handlers/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs  repository.rs
crates/infrastructure/: Cargo.toml
crates/persistence/: Cargo.toml
src/: lib.rs  main.rs
src/application/: mod.rs  user_service.rs
src/commands/: command_handler.rs  mod.rs  register_user_command.rs  rename_user_command.rs
src/composition/: app_builder.rs  mod.rs
src/domain/: mod.rs  repository.rs  user_aggregate.rs  user_repository.rs
src/events/: domain_events.rs  event_bus.rs  event_envelope.rs  event_store.rs  mod.rs  projections.rs  user_events.rs
src/infrastructure/: database.rs  errors.rs  logger.rs  metrics.rs  mod.rs
src/queries/: mod.rs  user_queries.rs
tests/: duplicate_prevention_tests.rs  integration_tests.rs
(+18 files in other folders)
