[package]
name = "api-rest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-rest"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
persistence = { path = "../persistence" }
application = { path = "../application" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
